# kfnetlist

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  pyproject.toml  versions.json
.github/workflows/: docs.yml  pages.yml  pre-commit.yml  release.yml  test.yml
0.1.0/: 404.html  _api_nav.yml  index.html  search.json  sitemap.xml
0.1.0/changelog/: index.html
0.1.0/concepts/netlist_model/: index.html
0.1.0/concepts/ports_and_refs/: index.html
0.1.0/concepts/serialization/: index.html
0.1.0/extraction/electrical_l2n/: index.html
0.1.0/extraction/optical_nets/: index.html
0.1.0/extraction/overview/: index.html
0.1.0/extraction/port_checking/: index.html
0.1.0/getting_started/installation/: index.html
0.1.0/getting_started/quickstart/: index.html
0.1.0/guides/equivalent_ports/: index.html
0.1.0/guides/faq/: index.html
0.1.0/guides/instance_flattening/: index.html  instance_flattening.ipynb
0.1.0/guides/lvs_equivalence/: index.html
0.1.0/reference/: index.html
0.1.0/reference/extract/: index.html
0.1.0/reference/port_check/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/changelog/: index.html
0.1.1/concepts/netlist_model/: index.html
0.1.1/concepts/ports_and_refs/: index.html
0.1.1/concepts/serialization/: index.html
0.1.1/extraction/electrical_l2n/: index.html
0.1.1/extraction/optical_nets/: index.html
0.1.1/extraction/overview/: index.html
0.1.1/extraction/port_checking/: index.html
0.1.1/getting_started/installation/: index.html
0.1.1/getting_started/quickstart/: index.html
0.1.1/guides/equivalent_ports/: index.html
0.1.1/guides/faq/: index.html
0.1.1/guides/instance_flattening/: index.html
0.1.1/guides/lvs_equivalence/: index.html
0.1.1/reference/: index.html
0.1.1/reference/extract/: index.html
0.1.1/reference/port_check/: index.html
0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
0.1.3/changelog/: index.html
0.1.3/concepts/netlist_model/: index.html
0.1.3/concepts/ports_and_refs/: index.html
0.1.3/concepts/serialization/: index.html  serialization.ipynb
0.1.3/extraction/electrical_l2n/: index.html
0.1.3/extraction/optical_nets/: index.html
0.1.3/extraction/overview/: index.html
0.1.3/extraction/port_checking/: index.html
0.1.3/getting_started/installation/: index.html
0.1.3/getting_started/quickstart/: index.html
0.1.3/guides/equivalent_ports/: index.html
0.1.3/guides/faq/: index.html
0.1.3/guides/instance_flattening/: index.html
0.1.3/guides/lvs_equivalence/: index.html
0.1.3/reference/: index.html
0.1.3/reference/extract/: index.html
0.1.3/reference/port_check/: index.html
0.1.4/: 404.html  index.html  sitemap.xml
0.1.4/changelog/: index.html
0.1.4/concepts/netlist_model/: index.html
0.1.4/concepts/ports_and_refs/: index.html
0.1.4/concepts/serialization/: index.html
0.1.4/extraction/electrical_l2n/: index.html
0.1.4/extraction/optical_nets/: index.html
0.1.4/guides/faq/: index.html
0.1.4/reference/: index.html
0.2.0/: 404.html  index.html  search.json  sitemap.xml
0.2.0/changelog/: index.html
0.2.0/reference/: index.html
0.2.1/: 404.html  index.html  search.json  sitemap.xml
0.2.1/changelog/: index.html
0.2.1/reference/: index.html
claude_context/: 2026-06-01-rdb-shorts-opens.md
contributing/: build_cell_netlist_deep_dive.md  call_stack_and_api_tutorial.md  elvis-error-reporting.md  error-reporting-gap-analysis.md  extraction.md  klayout_l2n_extraction_guideline.md  overview.md  placement_netlist_summary.md  port_adjacency_extraction.md
dev/: 404.html  index.html  search.json  sitemap.xml
dev/changelog/: index.html
dev/reference/: index.html
docs/: zensical.yml
docs/scripts/: build_docs_source.py
docs/source/: changelog.md  index.md
latest/changelog/: index.html
latest/reference/: index.html
src/: instance.rs  lib.rs  net.rs  netlist.rs  placement.rs  port.rs  rdb.rs
src/kfnetlist/: __init__.py  _errors.py  _native.pyi  _rdb.py  _summary.py  netlist.py  port_check.py
tests/: test_group_nets.py  test_lvs_equivalent.py  test_netlist_model.py  test_opens.py  test_parser.py  test_placement.py  test_port_check.py  test_ports_smoke.py  test_rdb.py  test_shorts.py
tests/data/: parse_l2n_flat.json  parse_l2n_hierarchical.json
(+124 files in other folders)
