[package]
name = "kfnetlist"
version = "0.1.4"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py312"] }
pythonize = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
