[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "kfnetlist"
description = "Standalone Netlist schema for kfactory / LVS tooling"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
version = "0.1.0"
authors = [{ name = "gdsfactory community", email = "contact@gdsfactory.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "klayout>=0.30.8,<0.31",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.12,<0.16",
]

[tool.maturin]
python-source = "src"
module-name = "kfnetlist._native"
features = ["pyo3/extension-module"]
