[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "kfnetlist"
description = "Standalone Netlist schema for kfactory / LVS tooling"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
version = "0.1.0"
authors = [{ name = "gdsfactory community", email = "contact@gdsfactory.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "klayout>=0.30.8,<0.31",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.12,<0.16",
]
notebooks = [
    "jupytext>=1.16.2,<2",
    "nbconvert>=7.16,<8",
    "ipykernel>=6.29,<7",
]
docs = [
    "kfnetlist[notebooks]",
    "zensical>=0.0.40,<0.1",
    "mike @ git+https://github.com/squidfunk/mike.git",
    "mkdocs-literate-nav>=0.6.3,<0.7",
    "mkdocstrings[python]>=1.0.4,<1.1",
    "pymdown-extensions>=10.21.2,<10.22",
    "ruff>=0.15.12,<0.16",
]

[tool.maturin]
python-source = "src"
module-name = "kfnetlist._native"
features = ["pyo3/extension-module"]

[tool.ruff]
exclude = ["docs"]

[tool.ty.src]
exclude = ["docs"]
