[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "kfnetlist"
description = "Standalone Netlist schema for kfactory and netlist tooling"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
version = "0.1.3"
authors = [{ name = "gdsfactory community", email = "contact@gdsfactory.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "klayout>=0.30.8,<0.31",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.12,<0.16",
]
notebooks = [
    "jupytext>=1.16.2,<2",
    "nbconvert>=7.16,<8",
    "ipykernel>=6.29,<7",
]
docs = [
    "kfnetlist[notebooks]",
    "zensical>=0.0.40,<0.1",
    "mkdocs-literate-nav>=0.6.3,<0.7",
    "mkdocstrings[python]>=1.0.4,<1.1",
    "pymdown-extensions>=10.21.2,<10.22",
    "ruff>=0.15.12,<0.16",
]

[tool.maturin]
python-source = "src"
module-name = "kfnetlist._native"
features = ["pyo3/extension-module"]

[tool.ruff]
exclude = ["docs"]

[tool.ty.src]
exclude = ["docs"]

[tool.tbump]

[tool.tbump.version]
current = "0.1.3"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:(?P<pre>(a|b|rc)\d+))?
  (?:\.post(?P<post>\d+))?
  (?:\.dev(?P<dev>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'current = "{current_version}"'

[[tool.tbump.file]]
src = "Cargo.toml"

[[tool.tbump.file]]
src = "src/kfnetlist/__init__.py"
